--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="canonical" href="#">
 
     <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <!-- custom icons from fontawesome -->
     <link rel="stylesheet" type="text/css" href=".css/fontawesome-free-6.0.0-web/css/fontawesome.min">
   </head>
