--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href=".css/fontawesome-free-6.0.0-web/css/fontawesome.min">
   </head>
 
-  <body class="text-center" cz-shortcut-listen="true" style="background-image:url(images/GOT.png)">
+  <body class="text-center" cz-shortcut-listen="true" style="background-image:url(GOT.png)">
     <div class="image">
     </div>
 
@@ -70,11 +70,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./Cover Template for Bootstrap_files/jquery-3.2.1.slim.min.js.download" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="jquery-3.2.1.slim.min.js.download" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/31596f5731.js" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="./css/popper.min.js.download"></script>
-    <script src="./css/bootstrap.min.js.download"></script>
+    <script src="popper.min.js.download"></script>
+    <script src="bootstrap.min.js.download"></script>
   
 
 </body></html>
