--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <main role="main" class="inner cover">
         <h1 class="cover-heading">About Me.</h1>
-        <p class="lead">I am into web designing and development I am basically a fullstack developer I can code in Javascript, Php, Php framework Lavarel and Django. I can also progrma in Python</p>
+        <p class="lead">I am into web designing and development I am basically a fullstack developer I can code in Javascript, Php, Php framework Lavarel and Django. I can also program in Python</p>
         <p class="lead">
           <a href="https://AmosOB.github.io" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
