--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <h3 class="masthead-brand">Amos Babu</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
-            <a class="nav-link" href="#">Resume</a>
+            <a class="nav-link" href="feature.html">Features</a>
+            <a class="nav-link" href="contacts.html">Contact</a>
+            <a class="nav-link" href="resume.html">Resume</a>
 
           </nav>
         </div>
