--- a/feature.html
+++ b/feature.html
@@ -15,7 +15,7 @@
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
     <!-- custom icons from fontawesome -->
-    <link rel="stylesheet" type="text/css" href="fontawesome.min">
+    <link rel="stylesheet" type="text/css" href=".css/fontawesome-free-6.0.0-web/css/fontawesome.min">
   </head>
 
   <body class="text-center" cz-shortcut-listen="true" style="background-image:url(GOT.png)">
