--- a/feature.html
+++ b/feature.html
@@ -25,7 +25,7 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand">Amos Babu</h3>
+          <h3 class="masthead-brand" style="margin-top: 1.5rem;">Amos Babu</h3>
           <nav class="nav nav-masthead justify-content-center" style="padding-top: 5%;">
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link active" href="#">Features</a>
