--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <meta name="author" content="">
 
     <title>Amos Babu</title>
+    <link rel="icon" href="alpha2.png">
 
     <link rel="canonical" href="#">
 
