--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="">
 
     <title>Amos Babu</title>
-    <link rel="icon" href="alpha2.png">
+    <link rel="icon" href="amos.png">
 
     <link rel="canonical" href="#">
 
