--- a/feature.html
+++ b/feature.html
@@ -6,7 +6,7 @@
     <meta name="author" content="">
 
     <title>Amos Babu</title>
-    <link rel="icon" href="amos.png">
+    <link rel="icon" href="alpha.png">
 
     <link rel="canonical" href="#">
 
@@ -26,8 +26,8 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand" style="margin-top: 1.5rem;">Amos Babu</h3>
-          <nav class="nav nav-masthead justify-content-center" style="padding-top: 5%;">
+          <h3 class="masthead-brand">Amos Babu</h3>
+          <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link active" href="#">Features</a>
             <a class="nav-link" href="contacts.html">Contact</a>
